2006-03-27  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.24.15, a release
	on branch_0_24 which recognizes the 10.4 bindist

2006-03-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.24.14, a bugfix release
	on branch_0_24

2006-03-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.sh: generate a new FinkVersion.pm on every bootstrap run
	* bootstrap.pl: find the default name for the binary distribution
	using the new default_binary_version function from FinkVersion.pm
	* BINDISTS: obsolete

2006-03-11  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* BINDISTS, bootstrap.pl: Message to users at end of bootstrap should
	guide them to the actual "dists" tarball, whose name depends on
	the identity of the current bindist.

2006-03-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.24.13, a bugfix release
	on branch_0_24

2006-03-08  Daniel Macks  <dmacks@netspace.org>

	* bootstrap.pl: Report fink version during initial checks.

2006-02-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* VERSION: Bumped package manager version to 0.24.12, a release
	on branch_0_24

2006-02-20  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl: temporary code giving users a chance to exit if 
	they've got the wrong distribution, and giving them some instructions
	if they exit (should be removed once we have a proper upgrade
	strategy in place)

2006-01-24  Daniel Macks  <dmacks@netspace.org>

	* fink.conf.5.in: Document SelfUpdateCVSTrees

2006-01-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* bootstrap.pl: add an optional argument to check_host telling us
	whether we are bootstrapping or not
	* bootstrap.pl: backport change noting that we don't need perlmod
	packages in bootstrap (made by dmacks on 2005-11-30)
	
2006-01-03  Daniel Macks  <dmacks@netspace.org>

	* all: updated Copyright notice
