@@ -1,3 +1,8 @@
+2006-05-28  Dave Morrison  <dmrrsn@users.sourceforge.net>
+
+	* bootstrap.pl: Don't query the user about 10.4 vs. 10.4-transitional;
+	simply display the information about how to control the choice.
+
 2006-03-27  Dave Morrison  <dmrrsn@users.sourceforge.net>
 
 	* VERSION: Bumped package manager version to 0.24.15, a release
